--- a/src/practice/callbacks.html
+++ b/src/practice/callbacks.html
@@ -9,40 +9,58 @@
     <h1>JavaScript Callbacks Practice</h1>
     <div id="output"></div>
     <script>
-      // Helper function to display output in the browser
-      function displayOutput(text) {
-        const output = document.getElementById('output');
-        const p = document.createElement('p');
-        p.textContent = text;
-        output.appendChild(p);
+      // Helper function (assumed to exist)
+      function A(B) {
+        const C = document.getElementById('output');
+        const D = document.createElement('p');
+        D.textContent = B;
+        C.appendChild(D);
       }
 
-      // MINUTES 0-15: CALLBACK BASICS
-      // Simple synchronous callback
-      function processData(data, callback) {
-        // Process the data
-        const result = data.toUpperCase();
-        // Call the callback with the processed data
-        callback(result);
+      // MINUTES 0-15: PROMISE FUNDAMENTALS
+      // Creating a simple Promise
+      function janjiMudah() {
+        return new Promise((kalauSelesai, kalauDitolak) => {
+          setTimeout(() => {
+            const berjaya = true; // Change to false to see rejection
+            if (berjaya) {
+              kalauSelesai('Promise resolved successfully');
+            } else {
+              kalauDitolak(new Error('Promise was rejected'));
+            }
+          }, 1000);
+        });
       }
 
-      // Example usage
-      processData('hello callbacks', function (processed) {
-        displayOutput(`Processed: ${processed}`);
-      });
+      // Using the Promise
+      displayOutput('Testing simple Promise...');
+      janjiMudah()
+        .then((keputusan) => displayOutput(keputusan))
+        .catch((ralat) => displayOutput(`Error: ${ralat.message}`));
 
-      // Synchronous vs Asynchronous callback
-      function syncOperation(callback) {
-        displayOutput('Sync operation started');
-        callback();
-        displayOutput('Sync operation completed');
+      // Converting callbacks to Promises
+      function readFilePromise(filename) {
+        return new Promise((kalauSelesai, kalauDitolak) => {
+          // Reusing our callback-based readFile function
+          readFile(filename, (sebuahVariableUntukError, data) => {
+            if (sebuahVariableUntukError) {
+              kalauDitolak(sebuahVariableUntukError);
+            } else {
+              kalauSelesai(data);
+            }
+          });
+        });
       }
 
-      function asyncOperation(callback) {
-        displayOutput('Async operation started');
-        setTimeout(callback, 2000);
-        displayOutput('Async operation initiated');
-      }
+      // Using Promise-based file reader
+      displayOutput('Testing Promise-based file reader...');
+      readFilePromise('config.txt')
+        .then((data) => displayOutput(`Promise keputusan: ${data}`))
+        .catch((sebuahVariableUntukError) => displayOutput(`Promise ralat: ${sebuahVariableUntukError.message}`));
+
+      readFilePromise('nonexistent.txt')
+        .then((data) => displayOutput(`Promise keputusan: ${data}`))
+        .catch((sebuahVariableUntukError) => displayOutput(`Promise ralat: ${sebuahVariableUntukError.message}`));
     </script>
   </body>
 </html>
